fix modal size on tablets

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,14 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+
+@media only screen and (min-height: 600px) and (min-width: 600px){
+.modal-wrapper {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
+}
